--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <!--<![endif]-->
 
 <head>
+	<meta name="google-site-verification" content="ZzeJCnoagcg6XSvwNwDWjatUKhEoEVRDyAU6r1ay7mM" />
     <title>Open Ahmedabad - An Open Data Platform</title>
 
     <meta charset="utf-8">
