Contact us & Link changes  #1  Added link to email address which will open mail client  - Added link to Open Loo Project

--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
                     <img src="images/team/open-loo-thumb.jpg" alt="" class="avatar" />
                     <h4>Open Loo</h4>
                     <p>Find closest public washroom in any area around you for Ahmedabad city.</p>
-                    <a target="_blank" class="fancy-button button-line button-g vertical">
-                        Coming Soon
+                    <a href="open-loo" target="_blank" class="fancy-button button-line button-g vertical">
+                        Open Portal
                         <span class="icon">
                             <i class="fa fa-external-link"></i>
                         </span>
@@ -286,9 +286,13 @@
                 <div class="col-lg-12">
                     <p class="subscription-success"></p>
                     <p class="subscription-failed"></p>
-                    <div class="col-md-10 col-md-offset-1 center section-title light">
+                    <div class="col-md-10 col-md-offset-1 center section-title light" style="margin-bottom: 18px">
                         <h3>Be the part of our community</h3>
-                        <p style="color: #FAFAFA">Let's make Ahmedabad great again!</p>
+                        <p style="color: #FAFAFA">
+                            Join our slack channel and discuss your ideas with the community<br>
+                            <i>Not familiar with slack ? You can discuss via email, too</i><br>
+                            <strong style="font-weight: 400">Let's make Ahmedabad great again!</strong>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -296,11 +300,17 @@
                 <div class="col-lg-12">
                     <div class="home-buttons">
                         <a href="http://datameet.org/wp-login.php?action=slack-invitation" data-mode="1" target="_blank" class="fancy-button button-line button-white vertical typeform-share">
-								Discuss your ideas with us
-								<span class="icon">
-									<i class="fa fa-slack"></i>
-								</span>
-							</a>
+                            Discuss your ideas with us
+                            <span class="icon">
+                                <i class="fa fa-slack"></i>
+                            </span>
+                        </a>
+                        <a href="mailto:info@openahmedabad.org" class="fancy-button button-line button-white vertical">
+                            Contribute via email
+                            <span class="icon">
+                                <i class="fa fa-envelope"></i>
+                            </span>
+                        </a>
                     </div>
                 </div>
             </div>
