--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <!--=== Color Scheme, three colors are available red.css, orange.css and gray.css ===-->
     <link rel="stylesheet" id="scheme-source" href="css/schemes/gray.css" />
-
+    <meta name="google-site-verification" content="72apPgmAuutICae_hWeOu8HWFlN7Bicfsb5TJBxUPtc" />
     <!--=== Internet explorer fix ===-->
     <!-- [if lt IE 9]>
 		<script src="http://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
